@@ -683,7 +683,10 @@ argument_list|)
 argument_list|)
 condition|)
 block|{
-throw|throw
+name|rsp
+operator|.
+name|setException
+argument_list|(
 operator|new
 name|SolrException
 argument_list|(
@@ -695,7 +698,9 @@ literal|"Can not access: "
 operator|+
 name|fname
 argument_list|)
-throw|;
+argument_list|)
+expr_stmt|;
+return|return;
 block|}
 if|if
 condition|(
@@ -709,7 +714,10 @@ operator|>=
 literal|0
 condition|)
 block|{
-throw|throw
+name|rsp
+operator|.
+name|setException
+argument_list|(
 operator|new
 name|SolrException
 argument_list|(
@@ -721,7 +729,9 @@ literal|"Invalid path: "
 operator|+
 name|fname
 argument_list|)
-throw|;
+argument_list|)
+expr_stmt|;
+return|return;
 block|}
 if|if
 condition|(
@@ -1207,7 +1217,10 @@ argument_list|)
 argument_list|)
 condition|)
 block|{
-throw|throw
+name|rsp
+operator|.
+name|setException
+argument_list|(
 operator|new
 name|SolrException
 argument_list|(
@@ -1219,7 +1232,9 @@ literal|"Can not access: "
 operator|+
 name|fname
 argument_list|)
-throw|;
+argument_list|)
+expr_stmt|;
+return|return;
 block|}
 if|if
 condition|(
@@ -1233,7 +1248,10 @@ operator|>=
 literal|0
 condition|)
 block|{
-throw|throw
+name|rsp
+operator|.
+name|setException
+argument_list|(
 operator|new
 name|SolrException
 argument_list|(
@@ -1245,7 +1263,9 @@ literal|"Invalid path: "
 operator|+
 name|fname
 argument_list|)
-throw|;
+argument_list|)
+expr_stmt|;
+return|return;
 block|}
 name|adminFile
 operator|=
