@@ -328,31 +328,6 @@ name|Throwable
 name|e
 parameter_list|)
 block|{
-if|if
-condition|(
-name|e
-operator|instanceof
-name|SolrException
-operator|&&
-operator|(
-operator|(
-name|SolrException
-operator|)
-name|e
-operator|)
-operator|.
-name|code
-argument_list|()
-operator|==
-name|ErrorCode
-operator|.
-name|SERVICE_UNAVAILABLE
-operator|.
-name|code
-condition|)
-block|{
-return|return;
-block|}
 name|String
 name|stackTrace
 init|=
@@ -411,37 +386,6 @@ name|Throwable
 name|e
 parameter_list|)
 block|{
-if|if
-condition|(
-name|e
-operator|instanceof
-name|SolrException
-operator|&&
-operator|(
-operator|(
-name|SolrException
-operator|)
-name|e
-operator|)
-operator|.
-name|code
-argument_list|()
-operator|==
-name|ErrorCode
-operator|.
-name|SERVICE_UNAVAILABLE
-operator|.
-name|code
-condition|)
-block|{
-name|log
-argument_list|(
-name|log
-argument_list|,
-name|msg
-argument_list|)
-expr_stmt|;
-block|}
 name|String
 name|stackTrace
 init|=
