@@ -142,6 +142,10 @@ Bug Fixes
 * SOLR-4009: OverseerCollectionProcessor is not resiliant to many error conditions
   and can stop running on errors. (milesli, Mark Miller)
 
+* SOLR-4019: Log stack traces for 503/Service Unavailable SolrException if not
+  thrown by PingRequestHandler. Do not log exceptions if a user tries to view a
+  hidden file using ShowFileRequestHandler.  (Tomás Fernández Löbbe via James Dyer)
+
 Other Changes
 ----------------------
 
